# text_editor

./: Bad  Cargo.toml  output.txt  z
src/: document.rs  editor.rs  file_type.rs  highlight.rs  lib.rs  main.rs  row.rs  terminal.rs
