[package]
name = "text_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5.6"
clap = { version = "3.0", features = ["derive"] }
simple-logging = "2.0.2"
log = "0.4.14"
unicode-segmentation = "1.9.0"
regex = "1.5"
